--- a/style.css
+++ b/style.css
@@ -2,18 +2,24 @@
     box-sizing: border-box;
   }
 
-  /*the container must be positioned relative:*/
-  .autocomplete {
+/*the container must be positioned relative:*/
+.autocomplete {
     position: relative;
-  }
+}
 
-  /*when hovering an item:*/
-  .autocomplete-items div:hover {
+/*when hovering an item:*/
+.autocomplete-items div:hover {
     background-color: #e9e9e9;
-  }
+}
 
-  /*when navigating through the items using the arrow keys:*/
-  .autocomplete-active {
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
     background-color: DodgerBlue !important;
     color: #ffffff;
-  }
+}
+
+/* p tag with id output has a border and is bolded yellow */
+#output {
+    font-weight: bold;
+    background-color: yellow;
+}
